--- a/estudo/style.css
+++ b/estudo/style.css
@@ -1,5 +1,3 @@
-@tailwind base;
-
 body {
   background-color: #e8ffff;
   color: #213e3b;
@@ -32,11 +30,24 @@ h3 {
     }
   
   }
-  
-  @tailwind components;
-  
-  @tailwind utilities;
+
 
   img {
     filter: brightness(0.9);
+  }
+
+  button {
+    width: 20%;
+    padding: 16px 0px;
+    margin: 25px;
+    border: none;
+    border-radius: 8px;
+    outline: none;
+    text-transform: uppercase;
+    font-weight: 800;
+    letter-spacing: 3px;
+    color: #2b134b;
+    background: #00ff88;
+    cursor: pointer;
+    box-shadow: 0px 10px 40px -12px #00ff8052;
   }
